--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/shared/components/footer/footer.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/shared/components/footer/footer.component.html
@@ -1,9 +1,17 @@
 <mbsc-bottom-nav [options]="bottomMenuSettings">
     <mbsc-nav-item data-icon="fa-home" (click)="goTo('/')" translate>Hem</mbsc-nav-item>
     <mbsc-nav-item data-icon="fa-plus" (click)="goTo()" [disabled]="true" translate>Lägg till</mbsc-nav-item>
-    <mbsc-nav-item data-icon="fa-list" (click)="goTo('/casesoverview')" translate>Översikt</mbsc-nav-item>
+    <mbsc-nav-item data-icon="fa-list" (click)="caseSearchPopup.instance.show()" translate>Översikt</mbsc-nav-item>
     <mbsc-nav-item data-icon="fa-globe" [disabled]="!languageId && !isLoadingLanguage" (click)="openLanguages()" translate>Språk</mbsc-nav-item>
     <mbsc-nav-item data-icon="fa-power-off" (click)="logout()" translate>Logga ut</mbsc-nav-item>
 </mbsc-bottom-nav>  
 
 <mbsc-select [(ngModel)]="languageId" [options]="languagesSettings" #languages hidden></mbsc-select>
+
+<mbsc-popup [options]="listSettings" #caseSearchPopup="mobiscroll">
+    <mbsc-listview [options]="lvSettings">
+        <mbsc-listview-header>Search Cases</mbsc-listview-header>
+        <mbsc-listview-item (click)="goToCases(SearchType.All)" translate>All</mbsc-listview-item>
+        <mbsc-listview-item (click)="goToCases(SearchType.MyCases)" translate>My Cases</mbsc-listview-item>
+    </mbsc-listview>
+</mbsc-popup>
