--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/shared/components/footer/footer.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/shared/components/footer/footer.component.html
@@ -9,9 +9,8 @@
 <mbsc-select [(ngModel)]="languageId" [options]="languagesSettings" #languages hidden></mbsc-select>
 
 <mbsc-popup [options]="popUpLlistSettings" #caseSearchPopup="mobiscroll">
-    <mbsc-listview [options]="popUpLvSettings">
-        <mbsc-listview-header translate>Söka ärenden</mbsc-listview-header>
-        <mbsc-listview-item (click)="goToCases(SearchType.All)" translate>Översikt</mbsc-listview-item>
+    <mbsc-listview [options]="popUpLvSettings">       
+        <mbsc-listview-item (click)="goToCases(SearchType.All)" translate>Alla ärenden</mbsc-listview-item>
         <mbsc-listview-item (click)="goToCases(SearchType.MyCases)" translate>Mina ärenden</mbsc-listview-item>
     </mbsc-listview>
 </mbsc-popup>
