--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/components/case-edit/case-edit.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/components/case-edit/case-edit.component.html
@@ -18,9 +18,9 @@
                     <case-textbox-control *ngIf="hasField(caseFieldsNames.PersonEmail)" [field]="getField(caseFieldsNames.PersonEmail)" [form]="form"></case-textbox-control>
                     <case-textbox-control *ngIf="hasField(caseFieldsNames.PersonPhone)" [field]="getField(caseFieldsNames.PersonPhone)" [form]="form"></case-textbox-control>
                     <case-textbox-control *ngIf="hasField(caseFieldsNames.PersonCellPhone)" [field]="getField(caseFieldsNames.PersonCellPhone)" [form]="form"></case-textbox-control>
-                    <case-dropdown-control *ngIf="hasField(caseFieldsNames.RegionId)" [field]="getField(caseFieldsNames.RegionId)" [form]="form" [dataSource]="dataSource.options.regions"></case-dropdown-control>
-                    <case-dropdown-control *ngIf="hasField(caseFieldsNames.DepartmentId)" [field]="getField(caseFieldsNames.DepartmentId)" [form]="form" [dataSource]="dataSource.options.departments"></case-dropdown-control>
-                    <case-dropdown-control *ngIf="hasField(caseFieldsNames.OrganizationUnitId)" [field]="getField(caseFieldsNames.OrganizationUnitId)" [form]="form" [dataSource]="dataSource.options.oUs"></case-dropdown-control>
+                    <case-dropdown-control *ngIf="hasField(caseFieldsNames.RegionId)" disabled=true [field]="getField(caseFieldsNames.RegionId)" [form]="form" [dataSource]="dataSource.options.regions"></case-dropdown-control>
+                    <case-dropdown-control *ngIf="hasField(caseFieldsNames.DepartmentId)" disabled=true [field]="getField(caseFieldsNames.DepartmentId)" [form]="form" [dataSource]="dataSource.options.departments"></case-dropdown-control>
+                    <case-dropdown-control *ngIf="hasField(caseFieldsNames.OrganizationUnitId)" disabled=true [field]="getField(caseFieldsNames.OrganizationUnitId)" [form]="form" [dataSource]="dataSource.options.oUs"></case-dropdown-control>
                     <case-textbox-control *ngIf="hasField(caseFieldsNames.CostCentre)" [field]="getField(caseFieldsNames.CostCentre)" [form]="form"></case-textbox-control>
                     <case-textbox-control *ngIf="hasField(caseFieldsNames.Place)" [field]="getField(caseFieldsNames.Place)" [form]="form"></case-textbox-control>
                     <case-textbox-control *ngIf="hasField(caseFieldsNames.UserCode)" [field]="getField(caseFieldsNames.UserCode)" [form]="form"></case-textbox-control>
@@ -36,9 +36,9 @@
                     <case-textbox-control *ngIf="hasField(caseFieldsNames.IsAbout_PersonEmail)" [field]="getField(caseFieldsNames.IsAbout_PersonEmail)" [form]="form"></case-textbox-control>
                     <case-textbox-control *ngIf="hasField(caseFieldsNames.IsAbout_PersonPhone)" [field]="getField(caseFieldsNames.IsAbout_PersonPhone)" [form]="form"></case-textbox-control>
                     <case-textbox-control *ngIf="hasField(caseFieldsNames.IsAbout_PersonCellPhone)" [field]="getField(caseFieldsNames.IsAbout_PersonCellPhone)" [form]="form"></case-textbox-control>
-                    <case-dropdown-control *ngIf="hasField(caseFieldsNames.IsAbout_RegionId)" [field]="getField(caseFieldsNames.IsAbout_RegionId)" [form]="form" [dataSource]="dataSource.options.regions"></case-dropdown-control>
-                    <case-dropdown-control *ngIf="hasField(caseFieldsNames.IsAbout_DepartmentId)" [field]="getField(caseFieldsNames.IsAbout_DepartmentId)" [form]="form" [dataSource]="dataSource.options.isAboutDepartments"></case-dropdown-control>
-                    <case-dropdown-control *ngIf="hasField(caseFieldsNames.IsAbout_OrganizationUnitId)" [field]="getField(caseFieldsNames.IsAbout_OrganizationUnitId)" [form]="form" [dataSource]="dataSource.options.isAboutOUs"></case-dropdown-control>
+                    <case-dropdown-control *ngIf="hasField(caseFieldsNames.IsAbout_RegionId)" disabled=true [field]="getField(caseFieldsNames.IsAbout_RegionId)" [form]="form" [dataSource]="dataSource.options.regions"></case-dropdown-control>
+                    <case-dropdown-control *ngIf="hasField(caseFieldsNames.IsAbout_DepartmentId)" disabled=true [field]="getField(caseFieldsNames.IsAbout_DepartmentId)" [form]="form" [dataSource]="dataSource.options.isAboutDepartments"></case-dropdown-control>
+                    <case-dropdown-control *ngIf="hasField(caseFieldsNames.IsAbout_OrganizationUnitId)" disabled=true [field]="getField(caseFieldsNames.IsAbout_OrganizationUnitId)" [form]="form" [dataSource]="dataSource.options.isAboutOUs"></case-dropdown-control>
                     <case-textbox-control *ngIf="hasField(caseFieldsNames.IsAbout_CostCentre)" [field]="getField(caseFieldsNames.IsAbout_CostCentre)" [form]="form"></case-textbox-control>
                     <case-textbox-control *ngIf="hasField(caseFieldsNames.IsAbout_Place)" [field]="getField(caseFieldsNames.IsAbout_Place)" [form]="form"></case-textbox-control>
                     <case-textbox-control *ngIf="hasField(caseFieldsNames.IsAbout_UserCode)" [field]="getField(caseFieldsNames.IsAbout_UserCode)" [form]="form"></case-textbox-control>                            
@@ -61,15 +61,15 @@
                         <case-datetime-control *ngIf="hasField(caseFieldsNames.RegTime)" [field]="getField(caseFieldsNames.RegTime)" [form]="form"></case-datetime-control>
                         <case-datetime-control *ngIf="hasField(caseFieldsNames.ChangeTime)" [field]="getField(caseFieldsNames.ChangeTime)" [form]="form"></case-datetime-control>
                         <case-textbox-control *ngIf="hasField(caseFieldsNames.UserId)" [field]="getField(caseFieldsNames.UserId)" [form]="form"></case-textbox-control>
-                        <case-dropdown-control *ngIf="hasField(caseFieldsNames.RegistrationSourceCustomer)" [field]="getField(caseFieldsNames.RegistrationSourceCustomer)" [form]="form"  [dataSource]="dataSource.options.customerRegistrationSources"></case-dropdown-control>
+                        <case-dropdown-control *ngIf="hasField(caseFieldsNames.RegistrationSourceCustomer)" disabled=true [field]="getField(caseFieldsNames.RegistrationSourceCustomer)" [form]="form"  [dataSource]="dataSource.options.customerRegistrationSources"></case-dropdown-control>
                         <case-multi-dropdown-control *ngIf="hasField(caseFieldsNames.CaseTypeId)" [field]="getField(caseFieldsNames.CaseTypeId)" [form]="form" [dataSource]="dataSource.options.caseTypes"></case-multi-dropdown-control>
                         <case-multi-dropdown-control *ngIf="hasField(caseFieldsNames.ProductAreaId)" [field]="getField(caseFieldsNames.ProductAreaId)" [form]="form" [dataSource]="dataSource.options.productAreas"></case-multi-dropdown-control>
-                        <case-dropdown-control *ngIf="hasField(caseFieldsNames.SystemId)" [field]="getField(caseFieldsNames.SystemId)" [form]="form" [dataSource]="dataSource.options.systems"></case-dropdown-control>
-                        <case-dropdown-control *ngIf="hasField(caseFieldsNames.UrgencyId)" [field]="getField(caseFieldsNames.UrgencyId)" [form]="form" [dataSource]="dataSource.options.urgencies"></case-dropdown-control>
-                        <case-dropdown-control *ngIf="hasField(caseFieldsNames.ImpactId)" [field]="getField(caseFieldsNames.ImpactId)" [form]="form" [dataSource]="dataSource.options.impacts"></case-dropdown-control>
+                        <case-dropdown-control *ngIf="hasField(caseFieldsNames.SystemId)" disabled=true [field]="getField(caseFieldsNames.SystemId)" [form]="form" [dataSource]="dataSource.options.systems"></case-dropdown-control>
+                        <case-dropdown-control *ngIf="hasField(caseFieldsNames.UrgencyId)" disabled=true [field]="getField(caseFieldsNames.UrgencyId)" [form]="form" [dataSource]="dataSource.options.urgencies"></case-dropdown-control>
+                        <case-dropdown-control *ngIf="hasField(caseFieldsNames.ImpactId)" disabled=true [field]="getField(caseFieldsNames.ImpactId)" [form]="form" [dataSource]="dataSource.options.impacts"></case-dropdown-control>
                         <case-multi-dropdown-control *ngIf="hasField(caseFieldsNames.CategoryId)" [field]="getField(caseFieldsNames.CategoryId)" [form]="form" [dataSource]="dataSource.options.categories"></case-multi-dropdown-control>
-                        <case-dropdown-control *ngIf="hasField(caseFieldsNames.SupplierId)" [field]="getField(caseFieldsNames.SupplierId)" [form]="form" [dataSource]="dataSource.options.suppliers"></case-dropdown-control>
-                        <case-dropdown-control *ngIf="hasField(caseFieldsNames.SupplierCountryId)" [field]="getField(caseFieldsNames.SupplierCountryId)" [form]="form" [dataSource]="dataSource.options.countries"></case-dropdown-control>
+                        <case-dropdown-control *ngIf="hasField(caseFieldsNames.SupplierId)" disabled=true [field]="getField(caseFieldsNames.SupplierId)" [form]="form" [dataSource]="dataSource.options.suppliers"></case-dropdown-control>
+                        <case-dropdown-control *ngIf="hasField(caseFieldsNames.SupplierCountryId)" disabled=true [field]="getField(caseFieldsNames.SupplierCountryId)" [form]="form" [dataSource]="dataSource.options.countries"></case-dropdown-control>
                         <case-textbox-control *ngIf="hasField(caseFieldsNames.InvoiceNumber)" [field]="getField(caseFieldsNames.InvoiceNumber)" [form]="form"></case-textbox-control>
                         <case-textbox-control *ngIf="hasField(caseFieldsNames.ReferenceNumber)" [field]="getField(caseFieldsNames.ReferenceNumber)" [form]="form"></case-textbox-control>
                         <case-textbox-control *ngIf="hasField(caseFieldsNames.Caption)" [field]="getField(caseFieldsNames.Caption)" [form]="form"></case-textbox-control>
@@ -83,7 +83,7 @@
                         <case-textbox-control *ngIf="hasField(caseFieldsNames.Available)" [field]="getField(caseFieldsNames.Available)" [form]="form"></case-textbox-control>
                         <case-textbox-control *ngIf="hasField(caseFieldsNames.Cost)" [field]="getField(caseFieldsNames.Cost)" [form]="form"></case-textbox-control>
                         <case-textbox-control *ngIf="hasField(caseFieldsNames.Cost_OtherCost)" [field]="getField(caseFieldsNames.Cost_OtherCost)" [form]="form"></case-textbox-control>
-                        <case-dropdown-control *ngIf="hasField(caseFieldsNames.Cost_Currency)" [field]="getField(caseFieldsNames.Cost_Currency)" [form]="form" [dataSource]="dataSource.options.currencies"></case-dropdown-control>
+                        <case-dropdown-control *ngIf="hasField(caseFieldsNames.Cost_Currency)" disabled=true [field]="getField(caseFieldsNames.Cost_Currency)" [form]="form" [dataSource]="dataSource.options.currencies"></case-dropdown-control>
                         <case-files-control *ngIf="hasField(caseFieldsNames.Filename)" [field]="getField(caseFieldsNames.Filename)"></case-files-control>
                 </mbsc-form-group-content>
             </mbsc-form-group>
@@ -94,18 +94,18 @@
                     <case-dropdown-control *ngIf="hasField(caseFieldsNames.WorkingGroupId)" [field]="getField(caseFieldsNames.WorkingGroupId)" [form]="form" [dataSource]="dataSource.options.workingGroups"></case-dropdown-control>
                     <case-dropdown-control *ngIf="hasField(caseFieldsNames.CaseResponsibleUserId)" [field]="getField(caseFieldsNames.CaseResponsibleUserId)" [form]="form" [dataSource]="dataSource.options.responsibleUsers"></case-dropdown-control>
                     <case-dropdown-control *ngIf="hasField(caseFieldsNames.PerformerUserId)" [field]="getField(caseFieldsNames.PerformerUserId)" [form]="form" [dataSource]="dataSource.options.performers"></case-dropdown-control>
-                    <case-dropdown-control *ngIf="hasField(caseFieldsNames.PriorityId)" [field]="getField(caseFieldsNames.PriorityId)" [form]="form" [dataSource]="dataSource.options.priorities"></case-dropdown-control>
-                    <case-dropdown-control *ngIf="hasField(caseFieldsNames.StatusId)" [field]="getField(caseFieldsNames.StatusId)" [form]="form" [dataSource]="dataSource.options.statuses"></case-dropdown-control>
+                    <case-dropdown-control *ngIf="hasField(caseFieldsNames.PriorityId)" disabled=true [field]="getField(caseFieldsNames.PriorityId)" [form]="form" [dataSource]="dataSource.options.priorities"></case-dropdown-control>
+                    <case-dropdown-control *ngIf="hasField(caseFieldsNames.StatusId)" disabled=true [field]="getField(caseFieldsNames.StatusId)" [form]="form" [dataSource]="dataSource.options.statuses"></case-dropdown-control>
                     <case-dropdown-control *ngIf="hasField(caseFieldsNames.StateSecondaryId)" [field]="getField(caseFieldsNames.StateSecondaryId)" [form]="form" [dataSource]="dataSource.options.stateSecondaries"></case-dropdown-control>
-                    <case-dropdown-control *ngIf="hasField(caseFieldsNames.Project)" [field]="getField(caseFieldsNames.Project)" [form]="form" [dataSource]="dataSource.options.projects"></case-dropdown-control>
-                    <case-dropdown-control *ngIf="hasField(caseFieldsNames.Problem)" [field]="getField(caseFieldsNames.Problem)" [form]="form" [dataSource]="dataSource.options.problems"></case-dropdown-control>
-                    <case-dropdown-control *ngIf="hasField(caseFieldsNames.CausingPart)" [field]="getField(caseFieldsNames.CausingPart)" [form]="form" [dataSource]="dataSource.options.causingParts"></case-dropdown-control>
-                    <case-dropdown-control *ngIf="hasField(caseFieldsNames.Change)" [field]="getField(caseFieldsNames.Change)" [form]="form" [dataSource]="dataSource.options.changes"></case-dropdown-control>
+                    <case-dropdown-control *ngIf="hasField(caseFieldsNames.Project)" disabled=true [field]="getField(caseFieldsNames.Project)" [form]="form" [dataSource]="dataSource.options.projects"></case-dropdown-control>
+                    <case-dropdown-control *ngIf="hasField(caseFieldsNames.Problem)" disabled=true [field]="getField(caseFieldsNames.Problem)" [form]="form" [dataSource]="dataSource.options.problems"></case-dropdown-control>
+                    <case-dropdown-control *ngIf="hasField(caseFieldsNames.CausingPart)" disabled=true [field]="getField(caseFieldsNames.CausingPart)" [form]="form" [dataSource]="dataSource.options.causingParts"></case-dropdown-control>
+                    <case-dropdown-control *ngIf="hasField(caseFieldsNames.Change)" disabled=true [field]="getField(caseFieldsNames.Change)" [form]="form" [dataSource]="dataSource.options.changes"></case-dropdown-control>
                     <case-datetime-control *ngIf="hasField(caseFieldsNames.PlanDate)" [field]="getField(caseFieldsNames.PlanDate)" [form]="form"></case-datetime-control>
                     <case-datetime-control *ngIf="hasField(caseFieldsNames.WatchDate)" [field]="getField(caseFieldsNames.WatchDate)" [form]="form"></case-datetime-control>
                     <case-switch-control *ngIf="hasField(caseFieldsNames.Verified)" [field]="getField(caseFieldsNames.Verified)" [form]="form"></case-switch-control>
                     <case-textarea-control *ngIf="hasField(caseFieldsNames.VerifiedDescription)" [field]="getField(caseFieldsNames.VerifiedDescription)" [form]="form"></case-textarea-control>
-                    <case-dropdown-control *ngIf="hasField(caseFieldsNames.SolutionRate)" [field]="getField(caseFieldsNames.SolutionRate)" [form]="form" [dataSource]="dataSource.options.solutionsRates"></case-dropdown-control>
+                    <case-dropdown-control *ngIf="hasField(caseFieldsNames.SolutionRate)" disabled=true [field]="getField(caseFieldsNames.SolutionRate)" [form]="form" [dataSource]="dataSource.options.solutionsRates"></case-dropdown-control>
                 </mbsc-form-group-content>
             </mbsc-form-group>
 <!-- 
